@@ -16,6 +16,7 @@ h3. Version 2.3.0 (NOT OFFICIALLY RELEASED YET)
 </dependency>
 ```
 
+* Better support for indexing @AsPipes@ within a @MetaPipe@ in @FluentUtility@
 * Added @TransformPipe.Order@ enums for ordering specifications in @OrderPipe@ and @OrderMapPipe@
 * Added @OrderMapPipe@ to sort a map given a @PipeFunction@ and then emit map keys
 * Added @ShufflePipe@ to gather up all objects then randomize their output
